DOMUI: Fix a bug that caused items on the navbar not to be clickable.
For z-index to work, elements have to be positioned.

TEST=confirm that the items on the navbar are now clickable. also confirm that the horizontal scroll bar works.
BUG=72279,71689

Review URL: http://codereview.chromium.org/6430001

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@74089 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: b7b68093a34b252e29a2a490fcb74cb7723fe0d9

--- a/chrome/browser/resources/options/options_page.css
+++ b/chrome/browser/resources/options/options_page.css
@@ -155,6 +155,7 @@ html[toolkit=views] .button-strip {
   left: 0;
   top: 0;
   width: 266px;
+  position: absolute;
   z-index: 2;
 }
 
